syntax = "proto2";
package errorpb;

import "metapb.proto";

message NotLeaderError {
    optional uint64 region_id   = 1;
    optional metapb.Peer leader = 2;
}

message RegionNotFoundError {
    optional uint64 region_id = 1;
}

message ErrorDetail {
    optional NotLeaderError not_leader              = 1;
    optional RegionNotFoundError region_not_found   = 2;
}

message Error {
    optional string message            = 1;
    optional ErrorDetail detail        = 2;
}